# haskell-learn

./: LICENSE  learn-haskell.cabal
cabal-project/: learn-haskell.cabal
cabal-project/tests/: AppTests.hs
codewars/: .gitignore  LICENSE  codewars.cabal  hie.yaml  learn-haskell.cabal  stack.yaml
codewars/.stack-work/: stack.sqlite3
codewars/.stack-work/install/aarch64-osx/5fcdde4fcb2d3e421d904e2b141cb989eb2b75c214fa897a4eb7fb6a71f865ec/9.4.5/lib/aarch64-osx-ghc-9.4.5/codewars-0.1.0.0-BM3WsMXuX7NDIxbgGOC4Vh/: AreTheyTheSame.dyn_hi
codewars/.stack-work/install/aarch64-osx/5fcdde4fcb2d3e421d904e2b141cb989eb2b75c214fa897a4eb7fb6a71f865ec/9.4.5/pkgdb/: codewars-0.1.0.0-BM3WsMXuX7NDIxbgGOC4Vh.conf  package.cache
codewars/app/: Main.hs
codewars/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
codewars/dist-newstyle/packagedb/ghc-9.4.4/: codewars-0.1.0.0-inplace.conf  package.cache
codewars/lib/: AreTheyTheSame.hs  ArrayDifference.hs  BackspacesInString.hs  BestTravel.hs  BreakCamelCase.hs  BuildTower.hs  CalcStringRotation.hs  CamelCase.hs  ChangingLetters.hs  CountingDuplicates.hs  CreatePhoneNumber.hs  DateByDayNumber.hs  Dec2Fact.hs  DeleteDigit.hs  DetectPangram.hs  DigitalRoot.hs  DirectionsReduction.hs  DivisibleByThree.hs  DontGiveMeFive.hs  DuplicateEncoder.hs  Factorial.hs  FindMissedNumber.hs  FindUniqueNumber.hs  FlattenSortArray.hs  FramedReflection.hs  HighAndLow.hs  HighScoreWord.hs  HowManyNines.hs  HumanReadableTime.hs  ISBN.hs  IsNumberPrime.hs  LoveVsFriendship.hs  Manhattan.hs  MaxLengthDiff.hs  MessageValidator.hs  MinMax.hs  MovingZeroToTheEnd.hs  MultiplesOf3And5.hs  NextBiggestNumber.hs  NthFibonacci.hs  (+30 more)
codewars/lib/Algorithm/: BinarySearchTree.hs  QuickSort.hs
codewars/lib/dist-newstyle/cache/: compiler
exercism/: CHANGELOG.md  exercism.cabal
exercism/app/: Main.hs
exercism/lib/: LeapYear.hs  ReverseString.hs
haskell-modules/: ChangeLog.md  haskell-modules.cabal  package.yaml
haskell-modules/app/: Main.hs
haskell-modules/src/: Internal.hs  Lib.hs
haskell-project/: LICENSE  haskell-project.cabal  stack.yaml
haskell-project/app/: Main.hs
haskell-project/app.save0/: Main.hs
haskell-project/src/: Anagram.hs  (+32 more)
haskell-scripts/: addtuples.hs  baby.hs  cipher.hs  classes.hs  exampleio.hs  exec.hs  functions.hs  getname.hs  hellomonads.hs  highorder.hs  journeycost.hs  lists.hs  maybemax.hs  modules.hs  monads.hs  polymorphism.hs  recursion.hs
src/: Main.hs
(+87 files in other folders)
